--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="coolstyle.css">
     <!-- <base href="../client/main.jsx"> -->
 
   </head>
